--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,26 +2,89 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
+@layer base {
   :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
-}
+    --background: 0 0% 100%;
+    --foreground: 222.2 47.4% 11.2%;
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+    --muted: 210 40% 96.1%;
+    --muted-foreground: 215.4 16.3% 46.9%;
+
+    --popover: 0 0% 100%;
+    --popover-foreground: 222.2 47.4% 11.2%;
+
+    --card: 0 0% 100%;
+    --card-foreground: 222.2 47.4% 11.2%;
+
+    --border: 214.3 31.8% 91.4%;
+    --input: 214.3 31.8% 91.4%;
+
+    --primary: 146 100% 29%;
+    --primary-foreground: 210 40% 98%;
+
+    --secondary: 210 40% 96.1%;
+    --secondary-foreground: 222.2 47.4% 11.2%;
+
+    --accent: 210 40% 96.1%;
+    --accent-foreground: 146 100% 29%;
+
+    --destructive: 0 100% 50%;
+    --destructive-foreground: 210 40% 98%;
+
+    --ring: 215 20.2% 65.1%;
+  }
+
+  @media (prefers-color-scheme: dark) {
+    :root {
+      --background: 240 10% 4%;
+      --foreground: 213 31% 91%;
+
+      --muted: 223 47% 11%;
+      --muted-foreground: 215.4 16.3% 56.9%;
+
+      --popover: 240 10% 4%;
+      --popover-foreground: 215 20.2% 65.1%;
+
+      --card: 240 10% 4%;
+      --card-foreground: 213 31% 91%;
+
+      --border: 216 34% 17%;
+      --input: 216 34% 17%;
+
+      --primary: 146 100% 29%;
+      --primary-foreground: 210 40% 98%;
+
+      --secondary: 222.2 47.4% 11.2%;
+      --secondary-foreground: 146 100% 29%;
+
+      --accent: 216 34% 17%;
+      --accent-foreground: 213 31% 91%;
+
+      --destructive: 0 63% 31%;
+      --destructive-foreground: 213 31% 91%;
+
+      --ring: 216 34% 17%;
+    }
+  }
+
+  body {
+    @apply bg-brand-background;
+  }
+
+  * {
+    @apply border-border;
+  }
+
+  ::-webkit-scrollbar {
+    @apply h-1.5 w-1.5;
+  }
+
+  ::-webkit-scrollbar-thumb {
+    @apply bg-foreground/40 rounded-lg transition-colors;
+  }
+
+  ::-webkit-scrollbar-thumb:hover,
+  ::-webkit-scrollbar-thumb:active {
+    @apply bg-foreground/60;
+  }
 }
